<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.projectgutenberg.ui.LibraryFragment"
        android:label="Library" >
    <action
            android:id="@+id/action_libraryFragment_to_bookWebViewFragment"
            app:destination="@id/bookWebViewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="bookId"
                app:argType="integer" />
            <argument
                android:name="bookTitle"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/bookWebViewFragment"
        android:name="com.example.projectgutenberg.ui.BookWebViewFragment"
        android:label="Book" >
        <argument
            android:name="bookId"
            app:argType="integer" />
        <argument
            android:name="bookTitle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_frequently_downloaded_screen"
        android:name="com.example.projectgutenberg.ui.FrequentlyDownloadedFragment"
        android:label="@string/menu_frequently_downloaded" />

    <fragment
        android:id="@+id/nav_master_categories_screen"
        android:name="com.example.projectgutenberg.ui.MasterCategoriesFragment"
        android:label="@string/menu_master_categories" />

    <fragment
        android:id="@+id/nav_reading_lists_screen"
        android:name="com.example.projectgutenberg.ui.ReadingListsFragment"
        android:label="@string/menu_reading_lists" />

    <fragment
        android:id="@+id/nav_search_options_screen"
        android:name="com.example.projectgutenberg.ui.SearchOptionsFragment"
        android:label="@string/menu_search_options" />

</navigation>
