<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_library">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.LibraryFragment"
        android:label="Library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_libraryFragment_to_bookWebViewFragment"
            app:destination="@id/nav_book_web_view">
            <argument
                android:name="bookId"
                app:argType="integer" />
            <argument
                android:name="bookTitle"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_book_web_view"
        android:name="com.phunkypixels.projectgutenberglibrary.ui.BookWebViewFragment"
        android:label="Book"
        tools:layout="@layout/fragment_book_webview" >
        <argument
            android:name="bookId"
            app:argType="integer" />
        <argument
            android:name="bookTitle"
            app:argType="string" />
    </fragment>
</navigation>
